# Clean-Architecture-with-Python

./: .gitignore  README.md  pyproject.toml  requirements.txt
Chapter_1/: README.md
Chapter_10/: 00_new_task_route.py  01_logging_task_use_case.py  02_logging_config.py  03_web_main_config_logging.py  04_create_task_use_case.py  07_trace_middleware.py  10_test_source_folders.py  11_test_domain_layer_dependencies.py  README.md
Chapter_11/: 01_order_entity.py  04_order_service.py  05_create_order_route.py  06_create_order_tests.py  09_order_controller.py  README.md
Chapter_12/: 00_create_task_req_orig_vs_api.py  02_create_task_route.py  03_clean_arch_approach.py  07_adr.md  README.md
Chapter_2/: README.md  dip_a_b_dependency.py  isp_media_post_refactor.py  isp_media_pre_refactor.py  spr_user_post_refactor.py  srp_unit_test.py  srp_user_pre_refactor.py
Chapter_3/: 02_type_hinting_containers.py  06_type_hinting_new_type.py  07_type_hinting_any_type.py  08_type_hinting_mypy_cli.py  README.md  example.mypy.ini
Chapter_4/: 00_create_new_task.py  01_create_task_business_rules.py  03_project_usage.py  05_factory_pattern_post_init.py  06_factory_pattern_task_factory.py  08_external_dependencies.py  09_refactoring_before.py  10_refactoring_after.py  README.md
Chapter_5/: 00_error_class.py  01_result_class.py  02_comple_task_use_case.py  03_task_repository.py  04_mongodb_repository.py  05_complete_project_use_case.py  05_init_complete_project_use_case.py  05_project_complete_use_case.py  06_complete_project_request.py  07_complete_project_response.py  README.md  (+8 more)
(+307 files in other folders)
